package com.example.engine;

public interface IImage {
    int getWidth();
    int getHeight();
}
