package com.example.engine;

public interface IInput {
    public static enum InputTouchType{
        TOUCH_DOWN, TOUCH_UP, TOUCH_MOVE;
    }
    public static enum InputKeyType{
        KEY_DOWN, KEY_UP, KEY_MOVE;
    }


}
